[gd_scene load_steps=10 format=3 uid="uid://dl522s41bxiwa"]

[ext_resource type="Script" path="res://Objects/Shop/ShopUI.gd" id="1_h3u56"]
[ext_resource type="Theme" uid="uid://dfgnx6so8jd63" path="res://Inventory/GUI/BG.tres" id="2_2x4kx"]
[ext_resource type="Texture2D" uid="uid://d1m4vm6k0wklb" path="res://Inventory/Icons/Iron_Shield2.png" id="2_owdxk"]
[ext_resource type="AudioStream" uid="uid://b4x0auedjt1nf" path="res://Audio/sfx/coin.wav" id="4_bkok4"]

[sub_resource type="Animation" id="Animation_ossqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -650)]
}

[sub_resource type="Animation" id="Animation_i67ls"]
resource_name = "TransIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -650), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ekfoe"]
resource_name = "TransOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -650)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1dui"]
_data = {
"RESET": SubResource("Animation_ossqy"),
"TransIn": SubResource("Animation_i67ls"),
"TransOut": SubResource("Animation_ekfoe")
}

[sub_resource type="GDScript" id="GDScript_tj5dx"]
script/source = "extends Label

func _ready():
	pass

func _process(_delta):
	text = \"Gold: \" + str(Game.Gold)
"

[node name="Shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_h3u56")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y1dui")
}

[node name="Shop" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -650.0
offset_right = 40.0
offset_bottom = -610.0

[node name="BG" type="Panel" parent="Shop"]
layout_mode = 0
offset_left = 128.0
offset_top = 66.0
offset_right = 1152.0
offset_bottom = 578.0
theme = ExtResource("2_2x4kx")

[node name="Title" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 128.0
offset_top = 66.0
offset_right = 1152.0
offset_bottom = 154.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 50
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Desc" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 472.0
offset_top = 412.0
offset_right = 808.0
offset_bottom = 492.0
theme_override_font_sizes/font_size = 16
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Close" type="Button" parent="Shop"]
layout_mode = 0
offset_left = 1024.0
offset_top = 74.0
offset_right = 1144.0
offset_bottom = 122.0
theme = ExtResource("2_2x4kx")
theme_override_font_sizes/font_size = 22
text = "Close"

[node name="Next" type="Button" parent="Shop"]
layout_mode = 0
offset_left = 768.0
offset_top = 276.0
offset_right = 888.0
offset_bottom = 324.0
theme = ExtResource("2_2x4kx")
theme_override_font_sizes/font_size = 22
text = "Next"

[node name="Prev" type="Button" parent="Shop"]
layout_mode = 0
offset_left = 392.0
offset_top = 276.0
offset_right = 512.0
offset_bottom = 324.0
theme = ExtResource("2_2x4kx")
theme_override_font_sizes/font_size = 22
text = "Prev"

[node name="Purchase" type="Button" parent="Shop"]
layout_mode = 0
offset_left = 576.0
offset_top = 508.0
offset_right = 704.0
offset_bottom = 556.0
theme = ExtResource("2_2x4kx")
theme_override_font_sizes/font_size = 22
text = "Purchase"

[node name="ItemIcon" type="Sprite2D" parent="Shop"]
position = Vector2(640, 300)
scale = Vector2(7, 7)
texture = ExtResource("2_owdxk")

[node name="Gold" type="Label" parent="Shop"]
layout_mode = 0
offset_left = 152.0
offset_top = 84.0
offset_right = 231.0
offset_bottom = 130.0
theme = ExtResource("2_2x4kx")
theme_override_font_sizes/font_size = 25
text = "Gold:"
script = SubResource("GDScript_tj5dx")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bkok4")
bus = &"SFX"

[connection signal="pressed" from="Shop/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Shop/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Shop/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Shop/Purchase" to="." method="_on_purchase_pressed"]
